# game_of_scissors_rock_and_paper

./: CMakeLists.txt  README.md
include/: .game.h.swp  .player.h.swp  .referee.h.swp  .writer.h.swp  choice.h  game.h  my_temp.h  player.h  referee.h  util.h  writer.h
lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
src/: main.cpp
test/: .test.cpp.swp  CMakeLists.txt  test.cpp
